# MaxRnCryptor

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/maxdota/example/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
maxrncryptor/: build.gradle
maxrncryptor/src/main/: AndroidManifest.xml
maxrncryptor/src/main/cpp/: CMakeLists.txt  rncryptor-native.cpp  rncryptor-native.h
maxrncryptor/src/main/java/com/maxdota/maxrncryptor/: RNCryptorNative.java
maxrncryptor/src/main/res/values/: strings.xml
